<resources>
    <string name="app_name">Nerde Yesem</string>
    <string name="fragment_restaurant_details_title">Details</string>
    <string name="hint_city_edit_text">City</string>
    <string name="restaurant_rating_text">%1$.1f (%2$d)</string>
    <string name="placeholder_start_looking_for_restaurants_nearby_text">Start looking for the best restaurants nearby!</string>
    <string name="request_location_permissions_dialog_message">Location permissions is needed to
        obtain the nearest restaurants depends on the current phone location.\n\nProceed?</string>
    <string name="dialog_cancel_button_title">Cancel</string>
    <string name="dialog_ok_button_title">Ok</string>
    <string name="fab_current_location_title">Current location</string>
    <string name="error_permissions_denied">Permissions were denied!</string>
    <string name="fragment_restaurants_details_contacts_title">Contacts</string>
    <string name="fragment_details_overview_title">Overview</string>
    <string name="fragment_restaurants_details_highlights_title">Highlights</string>
    <string name="fragment_restaurants_details_cuisines_title">Cuisines</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_login_user_name_hint">User name</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_login_login_button_title">Login</string>
    <string name="error_biometric_features_unavailable">Biometric features are currently unavailable</string>
    <string name="error_no_biometric_features_available">No biometric features available on this device</string>
    <string name="error_biometric_features_not_set">Biometric features are not set</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string name="error_unknown">Unknown error</string>
    <string name="fragment_biometric_verify_your_identity">Verify your identity</string>
    <string name="fragment_biometric_scan_your_fingerprint">Scan your fingerprint</string>
    <string name="fragment_biometric_use_password">Use password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid password</string>
</resources>