<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/app_name"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.demo.nerdeyesem.presentation.fragments.LoginFragment"
        android:label="@string/fragment_login_title">

        <action
            android:id="@+id/action_login_to_restaurants"
            app:destination="@id/restaurantsFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_close_exit" />

    </fragment>

    <fragment
        android:id="@+id/restaurantsFragment"
        android:name="com.demo.nerdeyesem.presentation.fragments.RestaurantsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_restaurants">

        <action
            android:id="@+id/action_restaurants_to_restaurant_details"
            app:destination="@id/restaurantDetailsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_close_exit" />

    </fragment>

    <fragment
        android:id="@+id/restaurantDetailsFragment"
        android:name="com.demo.nerdeyesem.presentation.fragments.RestaurantDetailsFragment"
        android:label="@string/fragment_restaurant_details_title"
        tools:layout="@layout/fragment_restaurants">

        <argument
            android:name="restaurantId"
            app:argType="string" />

    </fragment>

</navigation>